--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-privet
+<html>
+  <body>
+    <main>
+        <head>
+          <link rel="stylesheet" href="style.css">
+        </head>
+      <h1>
+        <img class="tonny" src="https://fineshoes.ru/upload/iblock/a00/krossovki-dlya-skejtbordinga-santa-cruz.jpg">
+             <p> Все о скейтбординге </p>
+      </h1>
+    <div class="about">
+      О Скейтбординге
+    </div>
+    <p>Скейтбо́рдинг (англ. skateboarding) — экстремальный вид спорта, заключающийся в катании и в исполнении различных трюков на скейтборде.</p>
+    <img class="skate2" src="https://n1s1.elle.ru/ed/14/df/ed14df4d990c8282c051e953ac96d35d/727x397_1_65863f0e8c42cbbd4a69f425faf74437@1200x655_0xac120003_5116848611553266820.JPEG">
+      <a class="story" href="">(1)История</a>
+      <a class="skaters" href="">(2)Про Скейтеры</a>
+
+<p>Скейтбординг также включает развлекательную деятельность, вид искусства, работу в индустрии развлечений и способ передвижения[1].<br> Человека, занимающегося скейтбордингом, называют скейтборди́стом, или ске́йтером. Отчёт за 2009 год показал,</br><br> что годовой доход рынка скейтбординга оценивается в 4,8 миллиарда долларов США, а в мире насчитывается 11,08 миллиона</br><br> активных скейтбордистов. В 2016 году было объявлено, что скейтбординг будет впервые представлен на Олимпийских играх в Токио 2020 года[2][3].</br><br> 21 июня отмечается Международный день скейтбординга. С 1970-х годов для скейтбордистов и других представителей экстремальных видов спортa</br><br>специально создавались скейтпарки[4]. Тем не менее, критики скейтбординга заявляют, что деятельность скейтбордистов приводит к повреждению </br><br>бордюров, каменных кладок, ступеней, скамеек, площадей и парков[5].<br></p>
+<img class="skate" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4CuWexFufcwR6WaAo72jdHstRu4MCYvoP-w&usqp=CAU">
+<footer>
+  <img class="ws" src="https://play-lh.googleusercontent.com/bYtqbOcTYOlgc6gqZ2rwb8lptHuwlNE75zYJu6Bn076-hTmvd96HH-6v7S0YUAAJXoJN">
+  <p>Тел:+996 0 509 199 199</p>
+    </main>
+</body>
+</html>
+<style.css>
+ .about{
+  background-color: grey;
+  }
+  
+  .skate2 {
+  float: left;
+  width: 50px;
+  height: 50px;
+  }
+  
+  skate {
+  float: right;
+  width: 50px;
+  height: 50px;
+  }
+  
+  .ws {
+  width: 30px;
+  height: 30px;
+  }
