--- a/maksatbayketop.html
+++ b/maksatbayketop.html
@@ -1,1 +1,54 @@
+<html>
+    <body>
+        <main>
+            <head>
+            <link rel="stylesheet" href="history.css">
+        </head>
+           <header>
+               <img class="history" src="https://static-cdn4.vigbo.tech/u76613/87797/blog/5352444/5259161/69065698/2000-6d00ef18a3690c83084075d7a74772d0.jpeg">
+               <p class="hp"> Все о скейтбординге </p> 
+           <header>
+           <div class="hstr">
+              <p class="hr"> История </p>
+           </div>
+           </header> 
+           <img class="st" src="https://is.vgoroden.ru/s7663o12fkeoi_v6isu2_w-1200.jpeg">
+           <a class="about" href="index.html"> [1]О скейтбординге</a><br></br>
+           <a class="skates" href="ramazan.html"> [2]Виды скейтов</a>
+           <p class="nachalo">1940—1960-е</p>
 
+<p class="llol">Скейтер выполняет лип-трюк FS Rock and Roll. Веллингтон, Новая Зеландия
+Скейтбординг появился в конце 1930-х — начале 1950-х годов, в среде калифорнийских сёрферов, которые не могли заниматься сёрфингом, когда не было волн. Первыми скейтами были ящики и доски с прикреплёнными колёсами. Позже ящики были заменены на доски из спрессованных слоёв древесины — похожие на те, которые используются в настоящее время.
+
+В начале 1960-х, производители досок для сёрфинга начинают выпускать скейтборды. В это же время, благодаря журналу Skateboarder Magazine, популярность скейтбординга возросла. В 1965 году были проведены несколько чемпионатов. Но, уже к 1966 году популярность скейтбординга упала и стала увеличиваться только в начале 1970-х[6][7]. Однако уже в середине 60-х и начале 70-х начали развиваться скейтбордические фирмы, которые имеют сегодня наибольшую популярность (Vans)</p>
+<img class="lololo" src="https://the-flow.ru/uploads/images/catalog/element/579a5afba46f2.jpg">
+<img class="lol" src="https://the-flow.ru/uploads/images/catalog/element/579a629b65e37.png">
+<p class= "sns">1970-е</p>
+<p class= "loll">В начале 1970-х, Фрэнк Нэсворти создаёт полиуретановые колёса[6]. Благодаря таким их свойствам, как улучшенное сцепление с дорогой и лёгкость, популярность скейтбординга резко увеличивается. Компании начинают выпуск подвесок специально предназначенных для скейтбординга. Деки становятся шире, достигая 10 дюймов (25,4 см), таким образом давая скейтеру больше контроля над скейтом.
+
+Производители начинают экспериментировать с новыми материалами для дек, такими как стекловолокно и алюминий, но большинство дек делаются из кленовой фанеры. Скейтеры начинают изобретать новые трюки. Также, калифорнийские скейтеры, среди которых Ty Page, Брюс Логан[en], Бобби Пирси[en], Кевин Рид[en], и команда Z-Boys, начинают кататься в бассейнах, пустых из-за засухи 1976 года. Они являются первыми, кто начал кататься в стиле верт.
+
+Результатом верт-движения стала борьба скейт-парков с высокой ответственностью, что привело большинство из них к закрытию. В ответ на это, верт-скейтеры начали строить свои собственные рампы, а фристайл-скейтеры продолжали развиваться в стиле флэтленд. Таким образом, к началу 1980-х годов, популярность скейтбординга вновь снизилась[7].</p>
+<img class="lull" src="https://the-flow.ru/uploads/images/catalog/element/579692a4adeeb.jpg">
+<img class="llul" src="https://www.traektoria.ru/upload/resize_cache/main/a7b/700_1000_1/a7bad407e6462edfe2ce73602fd9240e.JPG">
+<p class="ens"> 1980-е </p>
+
+<p class="lil">Скейтер выполняет kickflip
+Изобретение Аланом Гелфандом прыжка без рук (позже названного ollie) в 1976 году[8] и развитие грэб-трюков Джорджом Ортоном и Тони Альвой, позволило скейтерам выполнять трюки в вертикальных рампах. Но, поскольку большинство скейтеров в то время не имели доступа к рампам и не могли себе позволить собственные рампы, стрит-стиль завоевал популярность. Одним из пионеров стиля стрит стал Родни Маллен, который изобрёл многие современные трюки, такие как impossible и kickflip.
+
+Влияние фристайла на стрит стало заметно с середины 80-х, но скейты всё ещё оставались предназначенными для стиля верт: широкие деки с узкой носовой частью и большими мягкими колёсами. Тем не менее в конце 80-х скейтбординг быстро развивался. Из-за малого количества скейт-парков, скейтеры начали кататься в торговых центрах. Это привело к неприязни общества к скейтбордингу, судебным искам к скейтерам и запрету катания в общественных местах.</p>
+<img class="lll" src="https://www.sb.by/upload/iblock/c1c/c1ce02a9221907a69d79abcf377cf415.jpg">
+<img class="fff" src="http://lamcdn.net/furfurmag.ru/post_image-image/yXueKJmwstxH1B5Z9Ygt7A-wide.jpg">
+<p class="nns">1990-е — настоящее время</p>
+<p>В настоящее время большинство скейтеров катаются в стиле стрит, поэтому скейты претерпели изменения. Их длина составляет от 30 (76,2 см) до 32 дюймов (81,28 см), ширина — от 7 до 8,6 дюймов. Но бывают и исключения, как в меньшую сторону, так и в большую. Например, выпускаются скейтборды шириной в 6 дюймов, предназначенные для детей, или доски шириной 9 и даже 9,5 дюймов, так называемый круизерные доски, но они изготавливаются в традиционном исполнении, то есть в форме «рыбки». В большинстве на них катаются в пулах и рампах, но есть люди, которым удобно кататься на таких в стрите. Колёса делают из очень твёрдого полиуретана, с твёрдостью примерно 99А, но их размер уменьшен, что делает скейтборд легче и облегчает выполнение трюков. Форма скейтборда сформировалась на основе скейтов для фристайла и стала стандартом с середины 1990-х. Также бывают скейтборды и других форм, как правило они коллекционные и не предназначены для катания.</p>
+<img class="sss" src="https://www.kino-teatr.ru/news/28655/255327.jpg">
+<img class="kkk" src="https://www.film.ru/sites/default/files/images/2-28(11).jpg">
+<footer>
+    <img class="ws" src="https://play-lh.googleusercontent.com/bYtqbOcTYOlgc6gqZ2rwb8lptHuwlNE75zYJu6Bn076-hTmvd96HH-6v7S0YUAAJXoJN"> 
+    <p class="tel">
+        Тел: +996 0 509 199 199
+    </p>
+</footer>
+        </main>
+    </body>
+</html>
