--- a/maksatbayketop.html
+++ b/maksatbayketop.html
@@ -2,7 +2,7 @@
     <body>
         <main>
             <head>
-            <link rel="stylesheet" href="history.css">
+            <link rel="stylesheet" href="style.css">
         </head>
            <header>
                <img class="history" src="https://static-cdn4.vigbo.tech/u76613/87797/blog/5352444/5259161/69065698/2000-6d00ef18a3690c83084075d7a74772d0.jpeg">
@@ -46,7 +46,7 @@
 <footer>
     <img class="ws" src="https://play-lh.googleusercontent.com/bYtqbOcTYOlgc6gqZ2rwb8lptHuwlNE75zYJu6Bn076-hTmvd96HH-6v7S0YUAAJXoJN"> 
     <p class="tel">
-        Тел: +996 0 509 199 199
+        Тел: +996 509 199 199
     </p>
 </footer>
         </main>
