--- a/maksatbayketop.html
+++ b/maksatbayketop.html
@@ -2,7 +2,7 @@
     <body>
         <main>
             <head>
-            <link rel="stylesheet" href="style.css">
+            <link rel="stylesheet" href="history.css">
         </head>
            <header>
                <img class="history" src="https://static-cdn4.vigbo.tech/u76613/87797/blog/5352444/5259161/69065698/2000-6d00ef18a3690c83084075d7a74772d0.jpeg">
